# data_wrangler_env

./: .Dockerfile.swp  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  validate-submission.sh
data_wrangler_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
my_env/: __init__.py  client.py  models.py
my_env/server/: app.py  environment.py
